<resources>
    <string name="app_name">IdocProject</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_call">Call Us</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>


    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Call Us</item>
        <item>Profile</item>
        <item>About Us</item>
        <item>Settings</item>
        <item>Log Out</item>
    </string-array>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <!--  <string name="register"><u><b><i>Copyright</i></b></u></string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--language-->
    <string name="Doctor">Doctor</string>

    <string name="mesg">Messages</string>
    <string name="OurGoals">Our Goals</string>
    <string name="writemesg">Write your message :)</string>
    <string name="send">send</string>
    <string name="etimg">Edit profile Image</string>
    <string name="svimg">Save Image</string>
    <string name="cancelimg">Cancel Image</string>
    <string name="etxt">Edit </string>
    <string name="svtxt">Save Text</string>
    <string name="ctxt">Cancel Text</string>
    <string name="register">Information about doctor</string>
    <string name="clinic">Clinic Location</string>
    <string name="clinicCity">City</string>
    <string name="clinicPh">Phone</string>
    <string name="inftxt">write information</string>
    <string name="clinctxt">Type Location Link</string>
    <string name="speciality">write your speciality</string>
    <string name="savspeciality">Save speciality</string>



</resources>
