<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            >


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profimg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/profimg"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:layout_centerHorizontal="true"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etimg"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="@color/colorwhite"
                android:layout_below="@+id/profimg"
                android:id="@+id/etimg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveimg"
                android:text="@string/svimg"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="@color/colorwhite"
                android:visibility="invisible"
                android:layout_below="@+id/etimg"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelimg"
                android:text="@string/cancelimg"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:visibility="invisible"
                android:textColor="@color/colorwhite"
                android:layout_below="@+id/etimg"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Doctor"
                android:textColor="@color/colorblack"
                android:id="@+id/dr"
                android:layout_below="@+id/saveimg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  Doctor Name"
                android:textColor="@color/colorred"
                android:id="@+id/drname"
                android:layout_toRightOf="@+id/dr"
                android:layout_below="@+id/saveimg"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/speciality"
                android:textColor="@color/colorblack"
                android:id="@+id/sp"
                android:layout_below="@+id/dr"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorred"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sv_sp"
                android:text="@string/savspeciality"
                android:visibility="visible"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="@color/colorwhite"
                android:layout_below="@+id/sp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rate"
                android:layout_below="@+id/sv_sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/colorwhite"
                android:tint="@color/coloryellow"
                android:src="@drawable/ic_star_border_black_24dp"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rate2"
                android:layout_below="@+id/sv_sp"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/rate"
                android:layout_marginTop="10dp"
                android:background="@color/colorwhite"
                android:tint="@color/coloryellow"
                android:src="@drawable/ic_star_border_black_24dp"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rate3"
                android:layout_below="@+id/sv_sp"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/rate2"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_star_border_black_24dp"
                android:background="@color/colorwhite"
                android:tint="@color/coloryellow"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rate4"
                android:layout_below="@+id/sv_sp"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/rate3"
                android:layout_marginTop="10dp"
                android:background="@color/colorwhite"
                android:tint="@color/coloryellow"
                android:src="@drawable/ic_star_border_black_24dp"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rate5"
                android:layout_below="@+id/sv_sp"
                android:layout_centerHorizontal="true"
                android:layout_toLeftOf="@+id/rate"
                android:layout_marginTop="10dp"
                android:background="@color/colorwhite"
                android:tint="@color/coloryellow"
                android:src="@drawable/ic_star_border_black_24dp"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rate6"
                android:layout_below="@+id/sv_sp"
                android:layout_centerHorizontal="true"
                android:layout_toLeftOf="@+id/rate5"
                android:layout_marginTop="10dp"
                android:background="@color/colorwhite"
                android:tint="@color/coloryellow"
                android:src="@drawable/ic_star_half_black_24dp"
                />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infoImg"
                android:src="@drawable/ic_info_outline_black_24dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/rate"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:text="@string/register"
                android:textSize="20dp"
                android:textStyle="bold"
                android:typeface="serif"
                android:layout_below="@+id/rate"
                android:layout_toRightOf="@+id/infoImg"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editinfo"
                android:text="@string/etxt"
                android:visibility="visible"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="@color/colorwhite"
                android:layout_below="@+id/info"
                android:layout_marginTop="9dp"
                android:layout_alignParentLeft="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveinfo"
                android:text="@string/svtxt"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:layout_toRightOf="@+id/editinfo"
                android:layout_margin="4dp"
                android:textColor="@color/colorwhite"
                android:visibility="invisible"
                android:layout_below="@+id/info"
                android:layout_marginTop="9dp"
               />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelinfo"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:layout_toRightOf="@+id/saveinfo"
                android:layout_margin="4dp"                android:text="@string/ctxt"
                android:visibility="invisible"
                android:layout_below="@+id/info"
                android:layout_alignTop="@id/saveinfo"
                android:layout_marginTop="9dp"
               />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/infotxt"
    android:layout_below="@+id/editinfo"
    android:layout_marginTop="5dp"
    android:hint="@string/inftxt"
    android:backgroundTint="@color/colorred"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locImg"
                android:src="@drawable/ic_location_on_black_24dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/infotxt"
                android:layout_marginTop="9dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loc"
                android:text="@string/clinic"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_below="@+id/infotxt"
                android:layout_toRightOf="@+id/locImg"
                android:layout_marginTop="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editloc"
                android:text="@string/etxt"
                android:visibility="visible"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="@color/colorwhite"
                android:layout_below="@+id/loc"
                android:layout_marginTop="9dp"
                android:layout_alignParentLeft="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveloc"
                android:text="@string/svtxt"
                android:visibility="invisible"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="@color/colorwhite"
                android:layout_below="@+id/loc"
                android:layout_marginTop="9dp"
                android:layout_toRightOf="@+id/editloc"
                android:layout_marginLeft="4dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelloc"
                android:text="@string/ctxt"
                android:background="@drawable/button_bg"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="@color/colorwhite"
                android:visibility="invisible"
                android:layout_below="@+id/loc"
                android:layout_marginTop="9dp"
                android:layout_toRightOf="@+id/saveloc"
                android:layout_marginLeft="4dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:layout_below="@+id/editloc"
                android:layout_marginTop="5dp"
                android:hint="@string/clinicCity"
                android:backgroundTint="@color/colorred"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loclink"
                android:layout_below="@+id/city"
                android:layout_marginTop="5dp"
                android:hint="@string/clinctxt"
                android:backgroundTint="@color/colorred"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:layout_below="@+id/loclink"
                android:layout_marginTop="5dp"
                android:hint="@string/clinicPh"
                android:backgroundTint="@color/colorred"/>


            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="on"
                android:textOff="off"
                android:id="@+id/switch1"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <!--
            <ImageView
                android:id="@+id/profimg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="60dp"
                android:src="@mipmap/ic_launcher"

                android:layout_centerHorizontal="true"
                />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit"
        android:text="edit"
        android:layout_marginTop="5dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Doctor"
                android:textColor="@color/colorblack"
                android:id="@+id/dr"
                android:layout_below="@+id/profimg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  Doctor Name"
                android:textColor="@color/colorred"
                android:id="@+id/drname"
                android:layout_toRightOf="@+id/dr"
                android:layout_below="@+id/profimg"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="specialist"
                android:textColor="@color/colorblack"
                android:id="@+id/sp"
                android:layout_below="@+id/dr"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="rating"
                android:textColor="@color/colorblack"
                android:id="@+id/rate"
                android:layout_below="@+id/sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infoImg"
                android:src="@drawable/ic_info_outline_black_24dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/rate"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:text="Information about doctor"
                android:layout_below="@+id/rate"
                android:layout_toRightOf="@+id/infoImg"
                android:layout_marginTop="10dp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locImg"
                android:src="@drawable/ic_location_on_black_24dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/infoImg"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loc"
                android:text="Clinic Locatoin"
                android:layout_below="@+id/infoImg"
                android:layout_toRightOf="@+id/locImg"
                android:layout_marginTop="10dp"/>



            />

    -->


        </RelativeLayout>

    </LinearLayout>
</ScrollView>